# yop-cloud

./: .env.example  .gitignore  docker-compose.yaml
nginx/: app.conf  default.conf  nginx.conf
reader/: Dockerfile  pyproject.toml
reader/app/api/: deps.py  main.py
reader/app/core/: config.py
reader/app/schemas/: models.py  orm.py
reader/app/services/: cas.py  db.py  ports.py  s3.py
reader/app/tests/: conftest.py  test_main.py
reader/app/tests/services/: test_db.py
writer/: pyproject.toml
writer/app/: main.py
writer/app/api/: deps.py  main.py
writer/app/core/: config.py  db.py  s3.py
writer/app/schemas/: models.py  orm.py
writer/app/services/: cas.py  db.py  ports.py  s3.py  upload.py
writer/app/tests/: conftest.py
