[project]
name = "yop-cloud"
version = "0.1.0"
description = "FastAPI microservice for uploading files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=2.23.2",
    "fastapi>=0.116.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "sentry-sdk>=2.34.1",
    "sqlmodel>=0.0.24",
    "types-aiobotocore-lite[essential]>=2.23.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "aiofiles>=24.1.0",
    "hashfs>=0.7.2",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
]
